--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,9 @@
-body {
+html, body {
     background-color: #E3FDFD;
-    font-family: Lexend Deca,sans-serif;
+    font-family: 'Merriweather Sans', sans-serif;
+    height: 100%;
+    text-align: center;
+    margin: 0;
 }
 
 hr {
@@ -15,6 +18,16 @@ h1,h3 {
     color: #348d92;
 }
 
+a:link, a:visited,a:active{
+    color: #923434;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #923434;
+    text-decoration: underline;
+}
+
 .sub_heading {
     color: #348d92;
 }
@@ -27,4 +40,49 @@ h1,h3 {
 .work-heading {
     color: #348d92;
     font-weight: bolder;
+}
+
+.container {
+    position: relative;
+    display: block;
+    height: 100%;
+}
+
+.horizantal {
+    position: absolute;
+    margin: auto;
+    bottom: 2%;
+    width: 100%;
+}
+
+.icons {
+    display: inline-block;
+    width: auto;
+    height: 1em;
+}
+
+.main-font {
+    font-size: 130%;
+    margin: 1%;
+    color: #923434;
+}
+
+#head-container {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#my-title {
+    font-size: 500%;
+    width: fit-content;
+    margin-top: -3%;
+    margin-bottom: 2%;
+}
+
+#main-container {
+    padding: 0;
+    background: rgb(178,254,250);
+    background: radial-gradient(circle, rgb(178, 211, 254) 22%, rgb(112, 195, 244) 100%);
 }
