--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #E3FDFD;
+    background-color: #ffffff;
     font-family: 'Merriweather Sans', sans-serif;
     height: 100%;
     text-align: center;
@@ -9,12 +9,13 @@ html, body {
 hr {
     border-color: #A6E3E9;
     border-style: none;
+    border-top-style: none;
     border-top-style: dotted;
-    border-width: 10px;
+    border-width: 0.3em;
     width: 10%;
 }
 
-h1,h3 {
+h1,h2,h3,h4 {
     color: #348d92;
 }
 
@@ -42,19 +43,6 @@ a:hover {
     font-weight: bolder;
 }
 
-.container {
-    position: relative;
-    display: block;
-    height: 100%;
-}
-
-.horizantal {
-    position: absolute;
-    margin: auto;
-    bottom: 2%;
-    width: 100%;
-}
-
 .icons {
     display: inline-block;
     width: auto;
@@ -67,6 +55,56 @@ a:hover {
     color: #923434;
 }
 
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.skill {
+    position: relative;
+    margin: 5%;
+    width: 6em;
+}
+
+.skill-text {
+    text-align: center;
+}
+
+.skill-image {
+    height: 5em;
+    width: 5em;
+}
+
+.work-exp-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.work-content {
+    position: relative;
+    margin: 2%;
+    height: fit-content;
+    width: auto;
+    text-align: center;
+}
+
+.social {
+    width: 2em;
+    height: 2em;
+}
+
+#main-container {
+    position: relative;
+    display: block;
+    height: 100%;
+    overflow-y: scroll;
+}
+
 #head-container {
     position: absolute;
     top: 40%;
@@ -74,15 +112,27 @@ a:hover {
     transform: translate(-50%, -50%);
 }
 
-#my-title {
+#my-titles {
     font-size: 500%;
     width: fit-content;
-    margin-top: -3%;
-    margin-bottom: 2%;
+    margin: 0;
 }
 
 #main-container {
     padding: 0;
     background: rgb(178,254,250);
-    background: radial-gradient(circle, rgb(178, 211, 254) 22%, rgb(112, 195, 244) 100%);
+    background: radial-gradient(circle, #7af4dd 20%, rgb(112, 195, 244) 100%);
+}
+
+#duration, #exp{
+    position: relative;
+    margin: 2%;
+}
+
+#footer {
+    background-color: #7af4dd;
+}
+
+#social-links {
+    margin: 2%;
 }
